final project - front end developer
final project - front end developer

--- a/Final Project-Front End Developers/story.html
+++ b/Final Project-Front End Developers/story.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dandy Brewing Company</title>
-    <link rel="stylesheet" href="./styles.css">
+    <title>Story</title>
+    <link rel="stylesheet" href="./src/styles.css">
 </head>
 
 <body>
@@ -95,9 +95,7 @@
                 experience. 
             </p>
 
-            <p>
-                This story is just beginning. 
-            </p>
+            <p>This story is just beginning.</p>
         </section>
         <section></section>
     </main>
@@ -128,9 +126,6 @@
     <label for="btn"> 
      <input type="submit" value="Go To Top" title="Top" id="btn" class="scrollbtn"/>
      </label> 
-
-    
-
-    <script src="./index.js"></script>
+    <script src="./src/index.js"></script>
 </body>
 </html>
