--- a/Final Project-Front End Developers/taste.html
+++ b/Final Project-Front End Developers/taste.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dandy Brewing Company</title>
-    <link rel="stylesheet" href="./styles.css">
+    <title>The Tasting Room</title>
+    <link rel="stylesheet" href="./src/styles.css">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
     </header>
 
     <div class="background-image-Taste">
-        <h1 class="title-TR">The Tasting Room<span>Serving 20 taps of exceptional  craft beer, fine drinking food, <br> cocktails and wine.</span></h1>
+        <h1 class="title">The Tasting Room<span>Serving 20 taps of exceptional  craft beer, fine drinking food, <br> cocktails and wine.</span></h1>
         <a href="find.html" class="button">Where To Find Us</a>
     </div>
 
@@ -128,9 +128,11 @@
             </ul>
         </div>
     </footer>
+
        <label for="btn"> 
       <input type="submit" value="Go To Top" title="Top" id="btn" class="scrollbtn"/>
       </label> 
-    <script src="./index.js"></script>
+      
+    <script src="./src/index.js"></script>
 </body>
 </html>
