--- a/Final Project-Front End Developers/artist.html
+++ b/Final Project-Front End Developers/artist.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dandy Brewing Company</title>
-    <link rel="stylesheet" href="./styles.css">
+    <title>Artist in Residence</title>
+    <link rel="stylesheet" href="./src/styles.css">
 </head>
 
 <body>
@@ -103,6 +103,6 @@
     </label> 
 
 
-    <script src="./index.js"></script>
+    <script src="./src/index.js"></script>
 </body>
 </html>
