--- a/Final Project-Front End Developers/contact.html
+++ b/Final Project-Front End Developers/contact.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dandy Brewing Company</title>
-    <link rel="stylesheet" href="./styles.css">
+    <title>Contact</title>
+    <link rel="stylesheet" href="./src/styles.css">
 </head>
 
 <body>
     
     <header>
         <div class="logo">
-            <a href="index.html"><img src="img/Dandy_Brewing_Logo.png" alt="logo"></a>
-            
+            <a href="index.html"><img src="img/Dandy_Brewing_Logo.png" alt="logo"></a>  
         </div>
 
         <nav>
@@ -91,6 +90,6 @@
     </label> 
 
 
-    <script src="./index.js"></script>
+    <script src="./src/index.js"></script>
 </body>
 </html>
