--- a/Final Project-Front End Developers/find.html
+++ b/Final Project-Front End Developers/find.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dandy Brewing Company</title>
-    <link rel="stylesheet" href="./styles.css">
+    <title>Where to find us</title>
+    <link rel="stylesheet" href="./src/styles.css">
 </head>
 
 <body>
@@ -15,7 +15,6 @@
             
         </div>
         
-
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
@@ -178,9 +177,6 @@
     <input type="submit" value="Go To Top" title="Top" id="btn" class="scrollbtn"/>
     </label> 
 
-
-
-
-    <script src="./index.js"></script>
+    <script src="./src/index.js"></script>
 </body>
 </html>
